--- a/templates/chart.html
+++ b/templates/chart.html
@@ -27,6 +27,9 @@ https://templatemo.com/tm-548-training-studio
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
     
+    <!-- Mobile CSS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/mobile.css')}}">
+    
     <!-- Mobile optimization meta tags -->
     <meta name="theme-color" content="#ed563b">
     <meta name="apple-mobile-web-app-capable" content="yes">
